Mejora calidad, cobertura y documentación
Refactoriza servicios y controladores para resolver incidencias de calidad, añade DTOs y validaciones, amplía la cobertura automatizada, completa las traducciones del perfil en ES/EN/GL y renueva el README con capturas actuales, arquitectura y guía de despliegue.